syntax = "proto3";

package core.corepb.v1;

option go_package = "github.com/obolnetwork/charon/core/corepb/v1";

// PriorityResult defines a cluster wide priority result of the Prioritiser protocol.
message PriorityResult {
  repeated PriorityMsg msgs = 1;
  repeated PriorityTopicResult topics = 2;
}

// PriorityMsg defines all the priorities and metadata of a single peer in the Prioritiser protocol.
message PriorityMsg {
  repeated PriorityTopicProposal topics = 1;
  int64 slot = 2;
  string charon_version = 3;
  string lock_hash = 4;
  string go_os = 5;
  string go_arch = 6;
  string peer_id = 7;
  bytes msg_hash = 8;
  bytes signature = 9;
}

// PriorityTopicProposal defines a single peers proposed priorities for a single topic in the Prioritiser protocol.
message PriorityTopicProposal {
  string topic = 1;
  repeated string priorities = 2;
}

// PriorityTopicResult defines the cluster wide resulting priorities for a
// single topic in the Prioritiser protocol.
message PriorityTopicResult {
  string topic = 1;
  // priorities are ordered by decreasing score, ties are broken by peer with lowest peer ID.
  repeated PriorityScoredResult priorities = 2;
}

// PriorityScoredResult defines the cluster wide priority score in the Prioritiser protocol.
message PriorityScoredResult {
  string priority = 1;
  int64 score = 2;
}
